--- a/loki/config.yaml
+++ b/loki/config.yaml
@@ -4,7 +4,7 @@ arch:
 - amd64
 description: 'Loki: like Prometheus, but for logs.'
 homeassistant_api: true
-image: ghcr.io/cedricziel/{arch}-addon-grafana-loki
+image: ghcr.io/mcinnes01/{arch}-addon-grafana-loki
 init: false
 map:
 - share:rw
@@ -16,6 +16,6 @@ ports_description:
   3100/tcp: Loki
   9096/tcp: gRPC
 slug: loki
-url: https://github.com/cedricziel/ha-addon-grafana-mimir/blob/main/loki
+url: https://github.com/mcinnes01/ha-addon-grafana-mimir/blob/main/loki
 version: 1.0.0
 watchdog: http://[HOST]:3100/ready
